Add NODE_VERSION to build environment
Set the Node.js version for the build environment.

--- a/app/netlify.toml
+++ b/app/netlify.toml
@@ -2,3 +2,6 @@
   base = "app"
   command = "npm install --legacy-peer-deps && npm run build"
   publish = "build"
+
+[build.environment]
+  NODE_VERSION = "18"
