--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
 base = "."
-  command = "npm install --legacy-peer-deps && npm run build"
-  publish = ".next"
+command = "pnpm install && npm run build"
+publish = ".next"
 
 [build.environment]
-  NODE_VERSION = "18"
+NODE_VERSION = "18"
