--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,8 @@
 [build]
-base = "."
-command = "pnpm install && npm run build"
-publish = ".next"
+  command = "npm install --legacy-peer-deps && npm run build"
+  publish = ".next"
+  ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF ."
 
 [build.environment]
-NODE_VERSION = "18"
+  NODE_VERSION = "18"
+  NPM_FLAGS = "--legacy-peer-deps"
